client2 refactoring WIP